recursion.lessons.recursion.tree.Tree.scala.error
Tree:3: error: ')' expected but '<-' found.
	if (i<-1 to 7) {
             ^Tree:8: error: illegal start of simple expression
}
^