recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (i<-1 to 7) {
	avance(length);
	droite(45);
	tree(steps+1, length*shrink, angle, shrink);
	}
}
